syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.acme.grpc";
option java_outer_classname = "EchoGrpc";

package echo;

message EchoRequest {
  string message = 1;
}

message EchoStreamingRequest {
  string message = 1;
  int32 frequency = 2;
  int32 echoes = 3;
}

message EchoResponse {
  string message = 1;
}

service EchoService {
  rpc Echo(EchoRequest) returns (EchoResponse);
  rpc EchoStreaming(EchoStreamingRequest) returns (stream EchoResponse);
}

